--- a/manifests/brain-secrets-template.yaml
+++ b/manifests/brain-secrets-template.yaml
@@ -4,4 +4,6 @@ metadata:
   name: brain-secrets
 type: Opaque
 data:
-  secret_key_base: YOUR_KEY_HERE_BASE_64_ENCODED
+  # Generate your secret with:
+  # docker run --rm -it smartbox/brain:latest rake secret | tail -n1 | base64 | tr -d '\n'
+  secret_key_base: YOUR_GENERATED_SECRET_HERE
