--- a/manifests/cell.yaml
+++ b/manifests/cell.yaml
@@ -1,15 +1,28 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: cell
+  labels:
+    run: cell
+spec:
+  ports:
+    - port: 80
+  type: NodePort
+  selector:
+    app: cell
+---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: cell
 spec:
   selector:
-      matchLabels:
-        name: cell
+    matchLabels:
+      app: cell
   template:
     metadata:
       labels:
-        name: cell
+        app: cell
     spec:
       nodeSelector:
         type: cell
