--- a/manifests/brain-secrets-template.yaml
+++ b/manifests/brain-secrets-template.yaml
@@ -6,4 +6,5 @@ type: Opaque
 data:
   # Generate your secret with:
   # docker run --rm -it smartbox/brain:latest rake secret | tail -n1 | base64 | tr -d '\n'
-  secret_key_base: YOUR_GENERATED_SECRET_HERE
+  secret_key_base: YOUR_SECRET_HERE
+  mysql_root_password: YOUR_SECRET_HERE
