--- a/manifests/cell.yaml
+++ b/manifests/cell.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   ports:
     - port: 80
+      nodePort: 30001
   type: NodePort
   selector:
     app: cell
@@ -42,7 +43,6 @@ spec:
           volumeMounts:
             - mountPath: /volumes
               name: volumes
-          volumeMounts:
             - mountPath: /etc/cell
               name: cell-config
       volumes:
