--- a/manifests/cell.yaml
+++ b/manifests/cell.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      nodePort: 30001
-  type: NodePort
+      targetPort: 80
   selector:
     app: cell
 ---
@@ -27,6 +26,7 @@ spec:
     spec:
       nodeSelector:
         type: cell
+      hostNetwork: true
       containers:
         - name: cell
           image: smartbox/cell
