--- a/manifests/cell.yaml
+++ b/manifests/cell.yaml
@@ -1,15 +1,59 @@
 apiVersion: v1
-kind: Service
+kind: ConfigMap
 metadata:
-  name: cell
-  labels:
-    run: cell
+  name: cell-config
+data:
+  nginx.ingress.conf: |
+    upstream cell {
+      server unix:///run/cell/cell.sock;
+    }
+    server {
+      listen 80;
+      keepalive_timeout 5;
+      location / {
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header Host              $http_host;
+        proxy_redirect                     off;
+        proxy_pass                         http://cell;
+      }
+    }
+---
+apiVersion: extensions/v1beta1
+kind: DaemonSet
+metadata:
+  name: cell-ingress
 spec:
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app: cell
+  template:
+    metadata:
+      labels:
+        app: cell-ingress
+    spec:
+      hostNetwork: true
+      nodeSelector:
+        type: cell
+      containers:
+        - name: cell-ingress
+          image: nginx
+          env:
+            - name: NGINX_PORT
+              value: "80"
+          volumeMounts:
+            - name: nginx-config
+              mountPath: /etc/nginx/conf.d
+            - name: cell-runtime
+              mountPath: /run/cell
+      volumes:
+        - name: nginx-config
+          configMap:
+            name: cell-config
+            items:
+              - key: nginx.ingress.conf
+                path: nginx.conf
+        - name: cell-runtime
+          hostPath:
+            path: /run/cell
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -26,11 +70,10 @@ spec:
     spec:
       nodeSelector:
         type: cell
-      hostNetwork: true
       containers:
         - name: cell
           image: smartbox/cell
-          command: ["bundle", "exec", "rails", "server", "-p", "80", "-b", "0.0.0.0"]
+          command: ["puma", "-C", "/cell/config/puma.rb"]
           env:
             - name: RAILS_ENV
               value: production
@@ -43,13 +86,13 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-          ports:
-            - containerPort: 80
           volumeMounts:
             - mountPath: /volumes
               name: volumes
             - mountPath: /etc/cell
               name: cell-config
+            - mountPath: /run/cell
+              name: cell-runtime
       volumes:
         - name: volumes
           hostPath:
@@ -57,3 +100,6 @@ spec:
         - name: cell-config
           hostPath:
             path: /etc/cell
+        - name: cell-runtime
+          hostPath:
+            path: /run/cell
