Mistake when committing this content -- nothing to see here

--- a/manifests/cell-secrets-template.yaml
+++ b/manifests/cell-secrets-template.yaml
@@ -6,4 +6,4 @@ type: Opaque
 data:
   # Generate your secret with:
   # docker run --rm -it smartbox/brain:latest rake secret | tail -n1 | base64 | tr -d '\n'
-  secret_key_base: YjJlMmU5Y2I2NjllYzZmMTg4OGE1M2VjZTJiNWVmMDQ5YmIzZmJjMTQyM2U3NzMyMjk5N2VkMGIxM2ZkZDIyZWI5Y2Y5YTEzZDZjNDU5NjU5YzgyMWU3YjZkNDBjMzNjMzkzMTAxZjg5MGVlZmY5MGZlNjY2MGQ1YjJmN2NjNTENCg==
+  secret_key_base: YOUR_SECRET_HERE
