--- a/manifests/brain.yaml
+++ b/manifests/brain.yaml
@@ -1,41 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: brain-config
-data:
-  nginx.ingress.conf: |
-    upstream brain {
-      server unix:///run/brain/brain.sock;
-    }
-    server {
-      listen 80;
-      keepalive_timeout 5;
-      location / {
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-        proxy_set_header Host              $http_host;
-        proxy_redirect                     off;
-        proxy_pass                         http://brain;
-      }
-    }
-  nginx.internal.conf: |
-    upstream brain {
-      server unix:///run/brain/brain.sock;
-    }
-    server {
-      listen 8000;
-      keepalive_timeout 5;
-      location / {
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-        proxy_set_header Host              $http_host;
-        proxy_redirect                     off;
-        proxy_pass                         http://brain;
-      }
-    }
----
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -138,7 +100,12 @@ spec:
             "env": [
               {
                 "name": "RAILS_ENV",
-                "value": "production"
+                "valueFrom": {
+                  "configMapKeyRef": {
+                    "name": "brain-config",
+                    "key": "rails.env"
+                  }
+                }
               }
             ],
             "command": ["rake", "db:migrate"]
@@ -153,7 +120,10 @@ spec:
           command: ["puma", "-C", "/brain/config/puma.rb"]
           env:
             - name: RAILS_ENV
-              value: production
+              valueFrom:
+                configMapKeyRef:
+                  name: brain-config
+                  key: rails.env
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
@@ -167,18 +137,31 @@ spec:
           volumeMounts:
             - mountPath: /run/brain
               name: brain-runtime
+            - mountPath: /brain
+              name: smartbox-dev
+              subPath: brain
         - name: brain-worker
           image: smartbox/brain
           command: ["sidekiq"]
           env:
             - name: RAILS_ENV
-              value: production
+              valueFrom:
+                configMapKeyRef:
+                  name: brain-config
+                  key: rails.env
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: brain-secrets
                   key: mysql_root_password
+          volumeMounts:
+            - mountPath: /brain
+              name: smartbox-dev
+              subPath: brain
       volumes:
         - name: brain-runtime
           hostPath:
             path: /run/brain
+        - name: smartbox-dev
+          persistentVolumeClaim:
+            claimName: smartbox-dev-nfs
