--- a/manifests/cell.yaml
+++ b/manifests/cell.yaml
@@ -1,25 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: cell-config
-data:
-  nginx.ingress.conf: |
-    upstream cell {
-      server unix:///run/cell/cell.sock;
-    }
-    server {
-      listen 80;
-      keepalive_timeout 5;
-      location / {
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-        proxy_set_header Host              $http_host;
-        proxy_redirect                     off;
-        proxy_pass                         http://cell;
-      }
-    }
----
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -76,7 +54,10 @@ spec:
           command: ["puma", "-C", "/cell/config/puma.rb"]
           env:
             - name: RAILS_ENV
-              value: production
+              valueFrom:
+                configMapKeyRef:
+                  name: cell-config
+                  key: rails.env
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
@@ -93,6 +74,9 @@ spec:
               name: cell-config
             - mountPath: /run/cell
               name: cell-runtime
+            - mountPath: /cell
+              name: smartbox-dev
+              subPath: cell
       volumes:
         - name: volumes
           hostPath:
@@ -103,3 +87,6 @@ spec:
         - name: cell-runtime
           hostPath:
             path: /run/cell
+        - name: smartbox-dev
+          persistentVolumeClaim:
+            claimName: smartbox-dev-nfs
