--- a/manifests/cell-secrets-template.yaml
+++ b/manifests/cell-secrets-template.yaml
@@ -7,4 +7,4 @@ type: Opaque
 data:
   # Generate your secret with:
   # docker run --rm -it smartbox/brain:latest rake secret | tail -n1 | base64 | tr -d '\n'
-  secret_key_base: YOUR_SECRET_HERE
+  secret_key_base: YOUR_SECRET_KEY_BASE_HERE
