--- a/manifests/mysql.yaml
+++ b/manifests/mysql.yaml
@@ -26,7 +26,7 @@ spec:
         type: brain
       containers:
         - name: mysql
-          image: mysql
+          image: mariadb:10.2.10
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
