--- a/manifests/brain.yaml
+++ b/manifests/brain.yaml
@@ -14,7 +14,7 @@ spec:
         type: brain
       containers:
         - name: brain-ingress
-          image: nginx
+          image: nginx:1.13.6
           env:
             - name: NGINX_PORT
               value: "80"
@@ -62,7 +62,7 @@ spec:
         type: brain
       containers:
         - name: brain-internal
-          image: nginx
+          image: nginx:1.13.6
           env:
             - name: NGINX_PORT
               value: "8000"
