--- a/manifests/mongodb.yaml
+++ b/manifests/mongodb.yaml
@@ -26,7 +26,7 @@ spec:
         type: brain
       containers:
         - name: mongodb
-          image: mongo
+          image: mongo:3.4.10
           volumeMounts:
             - mountPath: /var/lib/mongodb
               name: mongodb-data
