--- a/manifests/redis.yaml
+++ b/manifests/redis.yaml
@@ -26,7 +26,7 @@ spec:
         type: brain
       containers:
         - name: redis
-          image: redis
+          image: redis:4.0.2
           volumeMounts:
             - mountPath: /var/lib/redis
               name: redis-data
